--- a/starweb/app/views/orders/_form_order_detail.html.erb
+++ b/starweb/app/views/orders/_form_order_detail.html.erb
@@ -10,9 +10,8 @@
       </ul>
     </div>
   <% end %>
-  
   <div class="field">
-    <%= form.hidden_field :order_id, value: @order.id %>
+    <%= form.hidden_field :order_id, value: order.id %>
   </div>
 
   <div class="field">
