--- a/starweb/app/views/products/edit.html.erb
+++ b/starweb/app/views/products/edit.html.erb
@@ -9,9 +9,8 @@
 </div>
 <hr>
 
-
 <div class="row">
   <div class="col-12">
-    <%= render 'form', product: @product %><br>
+    <%= render 'form', product: @product, supplies: @supplies  %><br>
   </div>
 </div>
