--- a/starweb/app/views/orders/new.html.erb
+++ b/starweb/app/views/orders/new.html.erb
@@ -11,6 +11,6 @@
 
 <div class="row">
   <div class="col-12">
-      <%= render 'form', order: @order %><br>
+      <%= render 'form', order: @order, sponsors: @sponsors%><br>
   </div>
 </div>
