--- a/starweb/app/views/partials/_navigation.html.erb
+++ b/starweb/app/views/partials/_navigation.html.erb
@@ -28,9 +28,8 @@
               <i class="fas fa-user mr-2"></i><%= current_user.email %>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Something else here</a>
               <div class="dropdown-divider"></div>
-              <%= link_to(raw("<i class='fa fa-sign-out fa-fw'></i> Cerrar sesión"), destroy_user_session_path, method: :delete, class: "dropdown-item")%>
+              <%= link_to('Cerrar sesión', destroy_user_session_path, method: :delete, class: "dropdown-item")%>
             </div>
           </li>
       </div>
