--- a/starweb/app/views/supplies/index.html.erb
+++ b/starweb/app/views/supplies/index.html.erb
@@ -14,12 +14,7 @@
     <%= link_to 'Nuevo', new_supply_path, class: 'btn btn-primary' %>
   </div>
   <!-- Search -->
-  <div class="mr-3">
-    <%= form_tag(supplies_path, method: :get, class: 'form-inline') do %>
-      <%= text_field_tag :term, params[:term], class: 'form-control mr-sm-2', autofocus: true %>
-      <%= submit_tag 'Search', search: nil, class: 'btn btn-outline-success my-2 my-sm-0' %>
-    <% end %>
-  </div>
+  <%= render 'partials/search_by_name', q: @q %>
 </div>
 
 <!-- Content -->
