--- a/starweb/app/views/users/index.html.erb
+++ b/starweb/app/views/users/index.html.erb
@@ -10,6 +10,15 @@
 <div id="page-inner">
   <div class="row">
     <div class="col-md-12">
+      <!-- Search -->
+      <div class="mr-3 form-inline">
+        <%= search_form_for @q do |f| %>
+          <%= f.search_field :firstname_or_lastname_or_docnum_or_phone_or_email_or_city_or_country_cont, class: 'form-control mr-sm-2', autofocus: true %>
+
+          <%= f.submit class: 'btn btn-outline-success my-2 my-sm-0' %>
+        <% end %>
+      </div>
+      <br>
       <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover">
           <thead>
@@ -45,7 +54,7 @@
         </table>
         <%= link_to 'Nuevo', new_user_invitation_path, class: 'btn btn-primary' %>
       </div>
-    </div>
+    </br>
   </div>
   <!-- Pagination -->
   <%= render 'partials/pagination', paginate: @users %>
