Resolve some warnings with rails_best_practices

--- a/starweb/app/views/orders/index.html.erb
+++ b/starweb/app/views/orders/index.html.erb
@@ -44,7 +44,7 @@
                 <div class="card-body">
                   <%end%>
                   <h3 class="card-title">
-                    <%= order.client.firstname %> <%= order.client.lastname %><br><%= order.client.doc_ruc %>
+                    <%= order.client_firstname %> <%= order.client_lastname %><br><%= order.client_doc_ruc %>
                   </h3>
                 </div>
                 <hr>
