--- a/starweb/app/views/quotations/index.html.erb
+++ b/starweb/app/views/quotations/index.html.erb
@@ -33,7 +33,7 @@
                   <tbody>
                     <% @quotations.each do |quotation| %>
                     <tr>
-                      <td><%= quotation.currency.name %></td>
+                      <td><%= quotation.currency_name %></td>
                       <td><%= quotation.purchase %></td>
                       <td><%= quotation.sale %></td>
                       <td><%= quotation.updated_at %></td>
