--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -51,12 +51,12 @@
                 <h5 class="card-title mt-3"><b>Cliente</b></h5>
                 <hr>
                 <p class="card-text">
-                  <b>Nombre y Apellido</b><br><%= @order.client.firstname %>
-                  <%= @order.client.lastname %>
+                  <b>Nombre y Apellido</b><br><%= @order.client_firstname %>
+                  <%= @order.client_lastname %>
                 </p>
                 <p class="card-text">
                   <b>Documento - RUC</b><br>
-                  <%= @order.client.doc_ruc %>
+                  <%= @order.client_doc_ruc %>
                 </p>
                 <p class="card-text">
                   <b>Curso / Club</b> <br><%= @order.course_club %>
@@ -114,11 +114,11 @@
           <div class="card border-primary col-md-12">
             <div class="row no-gutters">
               <div class="col-md-4 mt-4">
-                <%= image_tag hasProduct.product.image.url(:thumb), class: 'card-img' %>
+                <%= image_tag hasProduct.product_image.url(:thumb), class: 'card-img' %>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title mt-2"><b><%= hasProduct.product.name %></b></h4>
+                  <h4 class="card-title mt-2"><b><%= hasProduct.product_name %></b></h4>
                   <hr>
                   <p class="card-text">
                     <p><b>Frontal</b> <br><%= hasProduct.specs_f %></p>
