--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -10,12 +10,13 @@
 <hr>
 <div id="page-inner">
   <% if current_user.is_secretary? %>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalProduct"> Agregar producto </button>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalProduct"> Agregar producto </button>
 
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalOrderDetail">Agregar detalles</button>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalOrderDetail">Agregar detalles</button>
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalInvoice">Facturar</button>
 
   <%= link_to 'Editar', edit_order_path(@order), class: 'btn btn-light' %>
-  <%= link_to 'Facturar', invoices_new_path(@order),  class: 'btn btn-success' %>
   <%end%>
   <div class="row mt-4">
     <div class="col-md-6">
@@ -164,6 +165,69 @@
             </div>
             <div class="modal-body">
               <%= render 'form_order_detail', order_detail: @order_detail, order: @order %>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal -->
+      <div class="modal fade" id="modalInvoice" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h3 class="modal-title" id="exampleModalLabel">Invoice Receipt</h3>
+              <hr>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-6">
+                  <p><b>Billed to:</b> <%= "#{@order.client.firstname} #{@order.client.lastname}" %></p>
+                </div>
+                <div class="col-6">
+                  <p><b>Invoice date:</b> <%= Date.current %></p>
+                  <p><b>Invoice No:</b> 1</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <h5>Invoice Summary</h5>
+                  <table class="table">
+                    <thead>
+                    <tr>
+                      <th scope="col">SI. no.</th>
+                      <th scope="col" style="width: 60%">Description</th>
+                      <th scope="col">Unit Price</th>
+                      <th scope="col">Total Price</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <% total = 0 %>
+                    <% id = @hasProduct.id %>
+                    <% @order.has_products.each do |hasProduct| %>
+                      <% total += hasProduct.quantity * hasProduct.product.price %>
+                      <tr>
+                        <th scope="row"><%= hasProduct.id %></th>
+                        <th scope="row"><%= hasProduct.product.name %></th>
+                        <th scope="row"><%= hasProduct.product.price %></th>
+                        <th scope="row"><%= hasProduct.quantity * hasProduct.product.price %></th>
+                      </>
+                    <% end %>
+                    </tbody>
+                  </table>
+                  <div class="row">
+                    <div class="col-9">
+                    </div>
+                    <div class="col-3">
+                      <p><b>SubTotal:</b> <%= total %></b>
+                      <p><b>Tax:</b> <%= total %></b>
+                      <p><b>Total:</b> <%= total %></b>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
