--- a/starweb/app/views/invoices/show.html.erb
+++ b/starweb/app/views/invoices/show.html.erb
@@ -11,14 +11,14 @@
 
 
 <div class="row">
-  <div class="col-6">
-    <p><b>Cliente:</b> <%= "#{@invoice.recipient.firstname} #{@invoice.recipient.lastname}" %></p>
+  <div class="col-9">
+    <h5><b>Cliente:</b> <%= "#{@invoice.recipient.firstname} #{@invoice.recipient.lastname}" %></h5>
   </div>
-  <div class="col-6">
-    <p><b>Fecha:</b> <%= Date.current %></p>
-    <p><b>Factura No:</b> <%= @invoice.id %></p>
+  <div class="col-3">
+    <h5><b>Fecha:</b> <%= @invoice.created_at %></h5>
   </div>
 </div>
+<br>
 <div class="row">
   <div class="col-12">
     <h5>Invoice Summary</h5>
@@ -38,8 +38,8 @@
         <tr>
           <th scope="row"><%= hasProduct.quantity %></th>
           <th scope="row"><%= hasProduct.description %></th>
-          <th scope="row"><%= hasProduct.net_amount %></th>
-          <th scope="row"><%= hasProduct.quantity * hasProduct.net_amount %></th>
+          <th scope="row"><%= number_with_delimiter(hasProduct.net_amount, :delimiter => ',') %></th>
+          <th scope="row"><%= number_with_delimiter(hasProduct.quantity * hasProduct.net_amount, :delimiter => ',') %></th>
         </tr>
       <% end %>
       </tbody>
@@ -49,10 +49,10 @@
       <div class="col-10">
       </div>
       <div class="col-2">
-        <p><b>SubTotal:</b> <%= total %></b>
-        <p><b>Tax:</b> <%= total %></b>
-        <p><b>50%:</b> <%= total / 2 %></b>
-        <p><b>Total:</b> <%= total %></b>
+        <p><b>SubTotal:</b> <%= number_with_delimiter(total, :delimiter => ',') %></b>
+        <p><b>Tax:</b> <%= number_with_delimiter(total, :delimiter => ',') %></b>
+        <p><b>50%:</b> <%= number_with_delimiter(total, :delimiter => ',') %></b>
+        <p><b>Total:</b> <%= number_with_delimiter(total, :delimiter => ',') %></b>
       </div>
     </div>
   </div>
