--- a/starweb/app/views/orders/invoice.html.erb
+++ b/starweb/app/views/orders/invoice.html.erb
@@ -10,7 +10,6 @@
 </div>
 <hr>
 
-
 <div class="row">
   <div class="col-6">
     <p><b>Billed to:</b> <%= "#{@order.client.firstname} #{@order.client.lastname}" %></p>
@@ -22,12 +21,12 @@
 </div>
 <div class="row">
   <div class="col-12">
-    <h5>Invoice Summary</h5>
+    <h5>Detalle</h5>
     <table class="table">
       <thead>
       <tr>
         <th scope="col">Cantidad</th>
-        <th scope="col" style="width: 60%">Descripcion</th>
+        <th scope="col" style="width: 60%">Descripción</th>
         <th scope="col">Precio unitario</th>
         <th scope="col">Precio total</th>
       </tr>
@@ -39,8 +38,8 @@
         <tr>
           <th scope="row"><%= hasProduct.quantity %></th>
           <th scope="row"><%= hasProduct.product.name %></th>
-          <th scope="row"><%= hasProduct.product.price %></th>
-          <th scope="row"><%= hasProduct.quantity * hasProduct.product.price %></th>
+          <th scope="row"><%= number_with_delimiter(hasProduct.product.price, :delimiter => ',') %></th>
+          <th scope="row"><%= number_with_delimiter(hasProduct.quantity * hasProduct.product.price, :delimiter => ',') %></th>
         </tr>
       <% end %>
       </tbody>
@@ -50,10 +49,43 @@
       <div class="col-10">
       </div>
       <div class="col-2">
-        <p><b>SubTotal:</b> <%= total %></b>
-        <p><b>Tax:</b> <%= total %></b>
-        <p><b>50%:</b> <%= total / 2 %></b>
-        <p><b>Total:</b> <%= total %></b>
+        <p><b>SubTotal:</b> <%= number_with_delimiter(total, :delimiter => ',') %></b>
+        <p><b>IVA 10%:</b> <%= number_with_delimiter(total, :delimiter => ',') %></b>
+        <p><b>50%:</b> <%= number_with_delimiter(total / 2 , :delimiter => ',') %></b>
+        <p><b>Total:</b> <%= number_with_delimiter(total, :delimiter => ',') %></b>
+      </div>
+    </div>
+    <hr>
+    <div class="row" id="buttons">
+    <div class="col-9">
+    </div>
+    <div class="col-3">
+      <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modalProduct"> Imprimir (Ctrl + P) </button>
+      <% if @order.paid == 0 %>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalProduct"> Cobrar 50% </button>
+      <% else %>
+        <button type="button" class="btn btn-primary" disabled data-toggle="modal" data-target="#modalProduct"> Cobrar 50% </button>
+      <% end %>
+      <a type="button" class="btn btn-primary"  onclick="return confirm('Estás seguro?')" href="/orders/pay/<%=@order.id%>"> Facturar </a>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="modalProduct" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cobrar 50%</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h2>Gs. <%= number_with_delimiter(total / 2 , :delimiter => ',') %></h2>
+      </div>
+      <div class="modal-footer">
+        <a type="button" class="btn btn-success" href="/orders/half/<%=@order.id%>">Cobrar</a>
       </div>
     </div>
   </div>
