Validations for supplies and errors in spanish

--- a/starweb/app/assets/stylesheets/style.css
+++ b/starweb/app/assets/stylesheets/style.css
@@ -29,8 +29,7 @@ p {
   display: inline-block;
   margin-bottom: 15px;
   border: 1px solid #5f7c9a;
-  background-color: #f5f5f5;
-  }
+  background-color: #f5f5f5; }
 
 .card-body {
   padding: 5px; }
@@ -87,34 +86,26 @@ footer {
   color: #ffffff;
   height: 50px; }
 
-.select2-container--default .select2-selection--single{
-  height: 100% !important;
-}
+.select2-container--default .select2-selection--single {
+  height: 100% !important; }
 
 #select2-e1-container {
-  line-height: 40px !important;
-}
+  line-height: 40px !important; }
 
 @media print {
   body {
-    font-family: Consolas;
-  }
+    font-family: Consolas; }
 
   #sidebar-wrapper {
-    display:none !important;
-  }
+    display: none !important; }
 
   .mt-3 {
-    display: none;
-  }
+    display: none; }
 
   hr {
-    display: none;
-  }
+    display: none; }
 
   #buttons {
-    display: none;
-  }
-}
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
