--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -56,8 +56,8 @@
                 <h5 class="card-title mt-3"><b>Cliente</b></h5>
                 <hr>
                 <p class="card-text">
-                  <b>Nombre y Apellido</b><br><%= @order.client_firstname %>
-                  <%= @order.client_lastname %>
+                  <b>Nombre y Apellido</b><br><%= @order.client_first_name %>
+                  <%= @order.client_last_name %>
                 </p>
                 <p class="card-text">
                   <b>Documento - RUC</b><br>
