--- a/starweb/app/views/orders/_form_order_detail.html.erb
+++ b/starweb/app/views/orders/_form_order_detail.html.erb
@@ -1,35 +1,14 @@
-<%= form_with(model: order_detail, local: true) do |form| %>
-  <% if order_detail.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(order_detail.errors.count, "error") %> prohibited this order_detail from being saved:</h2>
+<%= simple_form_for order_detail, defaults: { label_html: { class: 'font-weight-bold' } } do |form| %>
+  <%= form.error_notification %>
 
-      <ul>
-      <% order_detail.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="field">
-    <%= form.hidden_field :order_id, value: order.id %>
-  </div>
+  <%= form.hidden_field :order_id, value: order.id %>
 
-  <div class="field">
-    <%= form.label 'Nombre' %>
-    <%= form.text_field :name, :autofocus => true, class: 'form-control' %>
-  </div>
+  <%= form.input :name, label: 'Nombre' %>
 
-  <div class="field">
-    <%= form.label 'Número' %>
-    <%= form.number_field :number, class: 'form-control' %>
-  </div>
+  <%= form.input :number, label: 'Número' %>
 
-  <div class="field">
-    <%= form.label 'Tamaño' %>
-    <%= form.text_field :size, class: 'form-control' %>
-  </div>
-  <hr>
-  <div class="actions">
-    <%= form.submit "Guardar", class: 'btn btn-primary' %>
-  </div>
+  <%= form.input :size, label: 'Tamaño' %>
+
+  <%= form.submit 'Guardar', class: 'btn btn-primary' %>
+
 <% end %>
