--- a/starweb/app/views/orders/invoice.html.erb
+++ b/starweb/app/views/orders/invoice.html.erb
@@ -12,7 +12,7 @@
 
 <div class="row">
   <div class="col-6">
-    <p><b>Billed to:</b> <%= "#{@order.client.firstname} #{@order.client.lastname}" %></p>
+    <p><b>Billed to:</b> <%= "#{@order.client.first_name} #{@order.client.last_name}" %></p>
   </div>
   <div class="col-6">
     <p><b>Invoice date:</b> <%= Date.current %></p>
