--- a/starweb/app/views/products/edit.html.erb
+++ b/starweb/app/views/products/edit.html.erb
@@ -11,6 +11,6 @@
 
 <div class="row">
   <div class="col-12">
-    <%= render 'form', product: @product, supplies: @supplies  %><br>
+    <%= render 'form', product: @product %><br>
   </div>
 </div>
