--- a/starweb/app/views/products/new.html.erb
+++ b/starweb/app/views/products/new.html.erb
@@ -11,7 +11,7 @@
 
 <div class="row">
   <div class="col-12">
-    <%= render 'form', product: @product, supplies: @supplies %><br>
+    <%= render 'form', product: @product %><br>
     <%= link_to 'Volver', products_path %>
   </div>
 </div>
