Search supplies with ajax

--- a/starweb/app/views/partials/_search_by_name.html.erb
+++ b/starweb/app/views/partials/_search_by_name.html.erb
@@ -1,5 +1,5 @@
 <div class="mr-3 form-inline">
-  <%= search_form_for q do |f| %>
+  <%= search_form_for q, remote: true do |f| %>
     <%= f.search_field :name_cont, class: 'form-control mr-sm-2', autofocus: true %>
 
     <%= f.submit class: 'btn btn-outline-success my-2 my-sm-0' %>
