--- a/starweb/app/views/orders/_form_has_product.html.erb
+++ b/starweb/app/views/orders/_form_has_product.html.erb
@@ -40,7 +40,7 @@
 
 <div class="field">
   <%= form.label 'Notas' %>
-  <%= form.text_field :color, class: 'form-control' %>
+  <%= form.text_area :color, class: 'form-control' %>
 </div><br>
 <div class="modal-footer">
   <%= form.submit 'Guardar', class: 'btn btn-primary' %>
