--- a/starweb/app/views/orders/show.html.erb
+++ b/starweb/app/views/orders/show.html.erb
@@ -150,7 +150,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="form_product">
               <%= render 'form_has_product', has_product: @hasProduct, order: @order %>
             </div>
           </div>
@@ -167,7 +167,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body">
+            <div id="form_order_detail" class="modal-body">
               <%= render 'form_order_detail', order_detail: @order_detail, order: @order %>
             </div>
           </div>
